--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-IE:<body bgsound="https://y.qq.com/n/yqq/song/003mliax1ldoKc.html?ADTAG=baiduald&play=infinite>
+<body bgsound="https://y.qq.com/n/yqq/song/003mliax1ldoKc.html?ADTAG=baiduald&play=infinite>
   小熊棒棒
