--- a/index.html
+++ b/index.html
@@ -1,2 +1,8 @@
-<body bgsound="https://y.qq.com/n/yqq/song/003mliax1ldoKc.html?ADTAG=baiduald&play=infinite>
-  小熊棒棒
+---
+layout: default
+nav: home
+comment: false
+---
+{% include about.html %}
+{% include blog.html %}
+{% include projects.html %}
